[gd_scene load_steps=3 format=3 uid="uid://dydu2yo827jh2"]

[ext_resource type="Script" path="res://UI Scenes/main_menu.gd" id="1_gbjot"]
[ext_resource type="PackedScene" uid="uid://dygqbwlpf7sx3" path="res://UI Scenes/options_menu.tscn" id="2_5r6gu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gbjot")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="SpacerNode" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Game Time" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Shape Incursion"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SpacerNode2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SpacerNode3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SpacerNode4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SpacerNode5" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="Options_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="Credits_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Credits"

[node name="Exit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit
"

[node name="OptionsMenu" parent="." instance=ExtResource("2_5r6gu")]
visible = false
layout_mode = 1
